# PM_Integration_generator

./: .gitignore  README.md  SETUP.md  deployment.md  get-mcp-credentials.sh  requirements.txt
mcp-server/: README.md  api_docs_server.py  network-config.json  payermax-mcp-complete-config.json  payermax-mcp-gateway-config.json  payermax-mcp-lambda-config.json  payermax-mcp-opensearch-config.json  pyproject.toml  requirements.txt  run_embedder.py  setup_embeddings.sh  test-mcp-gateway.py  tool_config.json  update-opensearch-access.sh
mcp-server/api-docs/付款/: 付款结果通知.md
mcp-server/api-docs/多币种资金管理/: 实时余额查询.md  实时汇率查询.md  换汇申请.md  换汇结果查询.md  日终余额查询.md
mcp-server/api-docs/收单/: 支付结果通知.md  收银台-下单.md
mcp-server/api-docs/收单:Auth-Capture/: 授权结果通知.md  撤销.md  撤销通知.md  请款.md  请款通知.md
mcp-server/api-docs/收单:Tokenization支付/: paymentTokenID解绑.md
mcp-server/api-docs/收单:前置组件Drop-In/: Apply Drop-in Session.md
mcp-server/api-docs/收单:订阅计划管理/: 取消订阅计划.md  扣款结果通知.md  订阅结果查询.md
mcp-server/api-docs/风控/: Rfi通知.md  (+2 more)
mcp-server/deploy/: architecture-diagram.md  deploy-gateway-target.sh  deploy-gateway.sh  deploy-lambda.sh  deploy-opensearch.sh  deploy-vpc.sh  gateway-target-template.yaml  gateway-template.yaml  lambda-template.yaml  opensearch-template.yaml  package-lambda.sh  vpc-network-cloudformation.yaml  vpc-resources-list.md
mcp-server/document_embedder/: document_embedder.py  parallel_embedder.py
mcp-server/integration_process/: 集成指引.md
mcp-server/tools/: __init__.py  api_documentation_search.py  api_endpoint_finder.py  integration_assistant.py  integration_guide_search.py
(+167 files in other folders)
